# trading_bot

./: .gitignore  LICENSE  pyproject.toml
back/: Dockerfile  db.sqlite3  prerun.sh  pyproject.toml
back/back/: .env.dist  app.py  db.sqlite3  main.py  settings.py
back/back/auth/: authentication.py
back/back/db/: db.py  models.py
back/back/dto/: user.py
back/back/routers/: auth.py  exchange.py  user.py
bot/: .env.dist  Cargo.toml  README.md  executor.py  i.json  main.py
bot/config/: log4rs.yaml
bot/sisyphus/: .env.dist  executor.py  main.py  models.py  settings.py  util.py
bot/src/: alo.rs  candles.rs  candlestore.rs  fib.rs  main.rs  worker.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/adapters/deno/: vite.config.ts
frontend/src/: actionActix.tsx  root.tsx
frontend/src/components/: APIKeysForm.tsx  Header.tsx  ListOfPairs.tsx  LoginForm.tsx  LogoutBtn.tsx  MainPage.tsx  Menu.tsx  OrderInputs.tsx  RegistrationForm.tsx  TableOfCandles.tsx  ThemeSwitchBtn.tsx  Tooltip.tsx  WidgetTradingView.tsx
frontend/src/components/router-head/: router-head.tsx
frontend/src/routes/: index.tsx  layout.tsx
frontend/src/routes/login/: index.tsx
frontend/src/routes/main/settings/API/: index.tsx
frontend/src/routes/main/trTerminal/: index.tsx
frontend/src/routes/registration/: index.tsx
frontend/src/routes/restore/: index.tsx
