[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["writer-mng <volodymyrpetriv2207@gmail.com>"]
readme = "README.md"
packages = [{include = "trading_bot"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
